Add two-digit numbers for each post
Also polish writing

--- a/_posts/2017-07-14-01_virtualenv.md
+++ b/_posts/2017-07-14-01_virtualenv.md
@@ -1,10 +1,13 @@
 ---
 layout: post
-title: 가상환경 설정
+title: 01. 가상환경 설정
 ---
+**목표**: Python3에서 사용할 가상환경을 설치한다.
 
 먼저 Python3가 설치되어 있고 버전이 3.6 이상임을 확인한다.
+
 ![python version]({{ site.baseurl }}/images/virtualenv/python-version.png)
+
 `Stock`이라는 이름의 가상환경을 만들려고 한다면, 다음 명령을 실행하면 된다.
 
 ```bash
@@ -19,7 +22,7 @@ python3 -m virtualenv Stock
 
 `Stock`이라는 가상환경을 실행하려면 해당 디렉토리에 들어가서 다음 명령을 실행한다.
 
-```
+```bash
 source bin/activate
 ```
 
@@ -27,7 +30,7 @@ source bin/activate
 
 ![install virtualenv]({{ site.baseurl}}/images/virtualenv/run-virtualenv.png)
 
-가상환경이 만들어지면서 `(Stock)` 이라는 글자가 쉘 프롬프트 앞에 나타난다. 
+가상환경이 만들어지면서 `(Stock)` 이라는 글자가 쉘 프롬프트 앞에 나타난다.
 
 가상환경을 끝내려면, `deactivate` 명령을 실행한다.
 
