--- a/_posts/2017-07-14-03_run-flask.md
+++ b/_posts/2017-07-14-03_run-flask.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: 플라스크 실행
+title: 03. 플라스크 실행
 ---
 
 **목표**: Flask 패키지를 이용해서 웹 서버를 만들고 ‘Hello, world!’라는 문자열을 출력하는 간단한 예제를 만든다.
@@ -19,7 +19,7 @@ if __name__ == "__main__":
 	app.run()
 ```
 
-이전에 설명한 바와 같이 `source` 명령으로 가상환경을 실행시킨다. 그리고 위의 `hello.py`를 실행시키면 된다.
+[이전에 설명한]({{ baseurl}}/_post/2017-07-14-01_virtualenv.md) 바와 같이 `source` 명령으로 가상환경을 실행시킨다. 그리고 위의 `hello.py`를 실행시키면 된다.
 
 ```bash
 python3 hello.py
@@ -33,7 +33,7 @@ python3 hello.py
 * Running on http://127.0.0.1:5000/ (Press CTRL+C to quit)
 ```
 
-이 메시지에서 볼 수 있듯이 IP 주소가 `127.0.0.1`인 로컬 머신의 5000번 포트에서 웹 서버가 동작하고 있다.
+위 메시지에서 볼 수 있듯이 IP 주소가 `127.0.0.1`인 로컬 머신의 5000번 포트에서 웹 서버가 동작하고 있다.
 
 웹 브라우저를 열어서 `localhost:5000` 을 주소창에 입력하면 `Hello, world!` 문자열을 확인할 수 있다.
 
@@ -47,4 +47,3 @@ python3 hello.py
 서버 프로그램을 종료시키려면 ```Ctrl + C```를 누르면 된다.
 
 ![stop]({{ site.baseurl}}/images/flask/stop-flask.png)
-
