--- a/_posts/2017-07-14-03_run-flask.md
+++ b/_posts/2017-07-14-03_run-flask.md
@@ -5,7 +5,9 @@ title: 03. 플라스크 실행
 
 **목표**: Flask 패키지를 이용해서 웹 서버를 만들고 ‘Hello, world!’라는 문자열을 출력하는 간단한 예제를 만든다.
 
-먼저 `hello.py` 라는 파이썬 파일을 만든다.
+Flask를 이용하면 [아파치](https://httpd.apache.org/)같은 거대한 프로그램을 설치하지 않고도 간단한 웹 서버를 만들 수 있다.
+
+먼저 `hello.py` 라는 파이썬 파일을 다음과 같이 만든다.
 
 ```python
 from flask import Flask
@@ -35,7 +37,7 @@ python3 hello.py
 
 위 메시지에서 볼 수 있듯이 IP 주소가 `127.0.0.1`인 로컬 머신의 5000번 포트에서 웹 서버가 동작하고 있다.
 
-웹 브라우저를 열어서 `localhost:5000` 을 주소창에 입력하면 `Hello, world!` 문자열을 확인할 수 있다.
+웹 브라우저를 열어서 `localhost:5000` 을 주소창에 입력하면 `Hello, world!` 문자열이 출력된다.
 
 ![result]({{ site.baseurl}}/images/flask/result.png)
 
@@ -44,6 +46,6 @@ python3 hello.py
 127.0.0.1 - - [13/Jul/2017 14:55:19] “GET / HTTP/1.1” 200 -
 ```
 
-서버 프로그램을 종료시키려면 ```Ctrl + C```를 누르면 된다.
+서버 프로그램을 종료시키려면 ```Ctrl+C```를 누르면 된다.
 
 ![stop]({{ site.baseurl}}/images/flask/stop-flask.png)
